Add: celda necesaria para ejecutar en colab

--- a/animaciones/Ejercicio 2.8.ipynb
+++ b/animaciones/Ejercicio 2.8.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "southern-thousand",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sudo apt update\n",
+    "!sudo apt install libcairo2-dev ffmpeg \\\n",
+    "    texlive texlive-latex-extra texlive-fonts-extra \\\n",
+    "    texlive-latex-recommended texlive-science \\\n",
+    "    tipa libpango1.0-dev\n",
+    "!pip install manim\n",
+    "!pip install IPython --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "id": "rural-cement",
    "metadata": {},
