Add: +documentación y un par de solvers

--- a/notebooks_varios/Funciones para ejercicios de guias 1-3.ipynb
+++ b/notebooks_varios/Funciones para ejercicios de guias 1-3.ipynb
@@ -140,7 +140,58 @@
     "A.columnspace() -> devuelve el espacio columna de A\n",
     "A.T.columnspace() -> devuelve el espacio columna de A traspuesta\n",
     "A.T.nullspace() -> devuelve el espacio nulo de A de a traspuesta\n",
-    "'''"
+    "'''\n",
+    "\n",
+    "#Función que calcula el Wronskiano \n",
+    "#(existe wronskian() directamente de sympy, pero no devuelve la matriz wronskiana, sino sólo el valor del wronskiano)\n",
+    "\n",
+    "def Wronskiano(B, x, return_matrix = True):\n",
+    "    \"\"\"\n",
+    "    Calcula el Wronskiano del conjunto de funciones\n",
+    "    contenidas en B en función de la variable x.\n",
+    "    \n",
+    "    Args:\n",
+    "        B (lista de funciones):\n",
+    "            El conjunto de funciones sobre el cual \n",
+    "            calcular el Wronskiano en función de la\n",
+    "            variable x.\n",
+    "        x (objeto tipo Symbol):\n",
+    "            Variable independiente.\n",
+    "        return_matrix (bool, opcional):\n",
+    "            Si es cierto, devuelve la matriz Wronskiana\n",
+    "            además del Wronskiano.\n",
+    "            \n",
+    "    Returns:\n",
+    "        w (función):\n",
+    "            Wronskiano del conjunto B.\n",
+    "        W (objeto tipo Matrix, opcional):\n",
+    "            Si return_matrix es True, devuelve la matriz\n",
+    "            wronskiana.\n",
+    "            \n",
+    "    Ejemplo:\n",
+    "    #Para ver si un conjunto es linealmente independiente en su correspondiente espacio vectorial, podemos emplear el Wronskiano.\n",
+    "    x = Symbol('x') # Definición de la variable simbólica\n",
+    "    F = [1, sinh(x), cosh(x)] #Conjunto de funciones\n",
+    "\n",
+    "    W, M_W = Wronskiano(F,x,return_matrix=True) #W es el Wronskiano, M_W es la matriz wronskiana\n",
+    "    print('La matriz wronskiana es: '); display(M_W)\n",
+    "    print('y el Wronskiano resulta: '); display(W)\n",
+    "\n",
+    "    #W.subs(x,0) #Si quisiera evaluar el Wronskiano en algún valor de x, por ejemplo en este caso x=0\n",
+    "    \"\"\"\n",
+    "\n",
+    "    n = len(B) # Cantidad de vectores\n",
+    "\n",
+    "    # Calculo la matrix wronskiana\n",
+    "    W = zeros(n,n)\n",
+    "    for i in range(n):\n",
+    "        for j, f in enumerate(B):\n",
+    "            W[i,j] = diff(f,x,i)\n",
+    "            \n",
+    "    if return_matrix:\n",
+    "        return W.det(), W\n",
+    "    \n",
+    "    return W.det()"
    ]
   },
   {
@@ -153,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "aging-replication",
    "metadata": {},
    "outputs": [
@@ -164,12 +215,12 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-95ebe46490cd>\u001b[0m in \u001b[0;36mnucleo_de_operador_diferencial\u001b[0;34m(L)\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m             \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraiz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mraiz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m         \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-5-6ef334dd3b4b>\u001b[0m in \u001b[0;36mnucleo_de_operador_diferencial\u001b[0;34m(L)\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m             \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraiz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mraiz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m         \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ' '",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-95ebe46490cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0mL\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mI\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mI\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mI\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m \u001b[0mNu_L\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnucleo_de_operador_diferencial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m \u001b[0mNu_A\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnucleo_de_operador_diferencial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'(D+3I)^6'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-4-95ebe46490cd>\u001b[0m in \u001b[0;36mnucleo_de_operador_diferencial\u001b[0;34m(L)\u001b[0m\n\u001b[1;32m     37\u001b[0m             \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraiz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mraiz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m             \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraiz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mraiz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'+'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m'**'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mraiz\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-5-6ef334dd3b4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0mL\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mI\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mI\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mI\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m \u001b[0mNu_L\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnucleo_de_operador_diferencial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     75\u001b[0m \u001b[0mNu_A\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnucleo_de_operador_diferencial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'(D+3I)^6'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-5-6ef334dd3b4b>\u001b[0m in \u001b[0;36mnucleo_de_operador_diferencial\u001b[0;34m(L)\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraiz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mraiz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'-'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m         \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m             \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraiz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mraiz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'+'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m'**'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mraiz\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: substring not found"
      ]
     }
@@ -201,6 +252,20 @@
     "    '''\n",
     "    img_S = matriz_de_transformacion_lineal(B, img_B) * Matrix.hstack(*S)\n",
     "    return img_S\n",
+    "\n",
+    "def preimagen_subespacio(B,img_B,Au):\n",
+    "    \"\"\"\n",
+    "    Dada una transformación lineal definida por una base B y las imágenes img_B \n",
+    "    de cada uno de los vectores de B, la función devuelve una base del subespacio\n",
+    "    T^(-1)(U), donde U = Nul(Au).\n",
+    "    \"\"\"\n",
+    "    B_matrix = Matrix.hstack(*B)\n",
+    "    Eb, pivots = B_matrix.rref(pivots=True)\n",
+    "\n",
+    "    img_B_matrix = Matrix.hstack(*img_B)\n",
+    "    sol = (Au * img_B_matrix).nullspace()\n",
+    "    B_T_inv_U = [B_matrix * v for v in sol]\n",
+    "    return B_T_inv_U\n",
     "\n",
     "# TODO: EN CONSTRUCCIÓN\n",
     "def nucleo_de_operador_diferencial(L):\n",
@@ -339,9 +404,24 @@
    "outputs": [],
    "source": [
     "def norma(x, producto_interno, G):\n",
+    "    '''\n",
+    "    Dado un vector, una matriz de producto interno y un producto interno, se computa la norma de dicho vector.\n",
+    "    \n",
+    "    x, y: son vectores\n",
+    "    producto_interno: es el nombre de una función definida\n",
+    "    G_B: es la matriz de Gram del producto interno\n",
+    "    '''\n",
     "    return sqrt(producto_interno(x, x, G))\n",
     "\n",
-    "def angulo(x, y, G, producto_interno):\n",
+    "def angulo(x: Matrix, y: Matrix, G: Matrix, producto_interno):\n",
+    "    '''\n",
+    "    Dados dos vectores, una matriz de producto interno y un producto interno, se computa el ángulo entre\n",
+    "    dichos vectores.\n",
+    "    \n",
+    "    x, y: son vectores\n",
+    "    producto_interno: es el nombre de una función definida\n",
+    "    G_B: es la matriz de Gram del producto interno\n",
+    "    '''\n",
     "    return acos(producto_interno(x, y, G) / (norma(x, producto_interno, G) * norma(y, producto_interno, G)))\n",
     "\n",
     "def distancia_de_un_vector_a_un_subespacio(v, B, G, producto_interno):\n",
@@ -368,16 +448,20 @@
     "def area_de_un_paralelogramo(G: Matrix):\n",
     "    '''\n",
     "    Computa el área de un paralelogramo dada una matriz de Gram de los vértices de dicho triángulo\n",
+    "    \n",
+    "    G: es la matriz de Gram de los vectores que forman el paralelogramo cuya área se quiere calcular\n",
     "    '''\n",
     "    return G.det()\n",
     "\n",
     "def area_de_un_triangulo(G: Matrix):\n",
     "    '''\n",
     "    Computa el área de un triángulo dada una matriz de Gram de los vértices de dicho triángulo\n",
+    "    \n",
+    "    G: es la matriz de Gram de los vectores que forman el triángulo cuya área se quiere calcular\n",
     "    '''\n",
     "    return 1/2 * sqrt(area_de_un_paralelogramo(G))\n",
     "\n",
-    "def resolver_area_de_un_triangulo_en_el_origen(G_B: Matrix, v1: Matrix, v2: Matrix):\n",
+    "def resolver_area_de_un_triangulo_en_el_origen(G_B: Matrix, v1: Matrix, v2: Matrix, producto_interno):\n",
     "    '''\n",
     "    Calcula el área del triángulo de vértices v1 y v2 (siendo nunguno el vector nulo)\n",
     "    \n",
@@ -385,12 +469,12 @@
     "    v1 = Matrix([1, 1, 0])\n",
     "    v2 = Matrix([1, 0, 1])\n",
     "    G_B = Matrix([[1, 1, 1], [1, 2, 2], [1, 2, 3]])\n",
-    "    resolver_area_de_un_triangulo_con_uno_de_los_vertices_en_el_origen(G_B, v1, v2)\n",
+    "    resolver_area_de_un_triangulo_con_uno_de_los_vertices_en_el_origen(G_B, v1, v2, producto_interno_por_definicion)\n",
     "    '''\n",
-    "    G_v1_v2 = matriz_de_gram(producto_interno_por_definicion, G_B, v1, v2)\n",
+    "    G_v1_v2 = matriz_de_gram(producto_interno, G_B, v1, v2)\n",
     "    return area_de_un_triangulo(G_v1_v2)\n",
     "   \n",
-    "def resolver_area_de_un_triangulo_corrido_del_origen(G_B: Matrix, v1: Matrix, v2: Matrix, v3: Matrix):\n",
+    "def resolver_area_de_un_triangulo_corrido_del_origen(G_B: Matrix, v1: Matrix, v2: Matrix, v3: Matrix, producto_interno):\n",
     "    '''\n",
     "    Calcula el área del triángulo de vértices v1, v2, y v3 (siendo nunguno el vector nulo)\n",
     "    \n",
@@ -399,10 +483,10 @@
     "    v2 = Matrix([4, 2, 2])\n",
     "    v3 = Matrix([4, 1, 3])\n",
     "    G_B = Matrix([[1, 1, 1], [1, 2, 2], [1, 2, 3]])\n",
-    "    resolver_area_de_un_triangulo_con_uno_de_los_vertices_en_el_origen(G_B, v1, v2, v3)\n",
+    "    resolver_area_de_un_triangulo_con_uno_de_los_vertices_en_el_origen(G_B, v1, v2, v3, producto_interno_por_definicion)\n",
     "    '''\n",
     "    w1, w2, w3 = v1-v1, v2-v1, v3-v1\n",
-    "    G_w2_w3 = matriz_de_gram(producto_interno_por_definicion, G_B, w2, w3)\n",
+    "    G_w2_w3 = matriz_de_gram(producto_interno, G_B, w2, w3)\n",
     "    return area_de_un_triangulo(G_v1_v2)"
    ]
   },
